# EDI

./: .env.example  .gitignore  BACKTEST_IMPLEMENTATION.md  CMS_ENGINE_GUIDE.md  CMS_ENGINE_IMPLEMENTATION.md  COMPLETE_API_GUIDE.md  COMPLETE_BACKEND_IMPLEMENTATION.md  DASHBOARD_IMPLEMENTATION.md  DATABASE_GUIDE.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_IMPLEMENTATION.md  EVENT_DETECTOR_IMPLEMENTATION.md  FASTAPI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDICATORS_IMPLEMENTATION.md  MARKET_REGIME_DETECTION_GUIDE.md  Makefile  NLP_ENGINE_GUIDE.md  NLP_ENGINE_IMPLEMENTATION.md  ORDER_EXECUTOR_IMPLEMENTATION.md  README.md  REGIME_IMPLEMENTATION.md  SENTIMENT_IMPLEMENTATION.md  SETUP_GUIDE.md  SIGNAL_AGGREGATOR_IMPLEMENTATION.md  TECHNICAL_INDICATORS_GUIDE.md  TECHNICAL_INDICATORS_IMPLEMENTATION.md  TRADING_ENGINE_GUIDE.md  TRADING_ENGINE_IMPLEMENTATION.md  docker-compose.yml  init_db.sql  pytest.ini  requirements.txt  setup.py
dashboard/: .env.example  FEATURES.md  README.md  index.html  package.json  setup.ps1  setup.sh  tailwind.config.js
examples/: api_client_demo.py  backtest_demo.py  event_detector_demo.py  indicators_demo.py  nlp_engine_demo.py  order_executor_demo.py  regime_detection_demo.py  regime_detector_demo.py  sentiment_analyzer_demo.py  sentiment_event_integration_demo.py  signal_aggregator_demo.py  trading_engine_demo.py
scripts/: setup.ps1  (+2 more)
src/indicators/: BUILDING.md  CMakeLists.txt  QUICKSTART.md  README.md  __init__.py  bindings.cpp  build.ps1  build.sh  engine.py  indicators.cpp  indicators.h  python_indicators.py  redis_streamer.py
(+80 files in other folders)
